force-app/main/default/objects/SVMXA360__CONF_HierarchyConfigDetail__c/SVMXA360__CONF_HierarchyConfigDetail__c.object-meta.xml
<CustomObject>
    <description>This object stores configuration details for the hierarchy configuration.</description>
    <label>Hierarchy Configuration Detail</label>
    <nameField>
        <displayFormat>AHCD-{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Hierarchy Configuration Detail</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>