force-app/main/default/objects/SVMXA360__CONF_HierarchyConfigDetail__c/fields/SVMXA360__AllowManagingChildAssets__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__AllowManagingChildAssets__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Enables create, Update, View and deleting of child Assets through Manage Child Asset component.</description>
    <label>Allow Managing Child Assets</label>
    <type>Checkbox</type>
</CustomField>