force-app/main/default/objects/SVMXA360__CONF_HierarchyConfigDetail__c/fields/SVMXA360__DisplayIconName__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__DisplayIconName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Display Icon Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>