force-app/main/default/objects/SVMXA360__CONF_HierarchyConfigDetail__c/fields/SVMXA360__EnableDefaultRecordActions__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__EnableDefaultRecordActions__c</fullName>
    <defaultValue>true</defaultValue>
    <description>The default user actions like Edit, Clone and Delete will be visible to the user on the record when this option ‘Enable Default Record Actions’ is checked.</description>
    <label>Enable Default Record Actions</label>
    <type>Checkbox</type>
</CustomField>