force-app/main/default/objects/SVMXA360__CONF_HierarchyConfigDetail__c/fields/SVMXA360__EnableNotification__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__EnableNotification__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When this is true, the notifications for the Assets would be shown in the hierarchy component.</description>
    <label>Enable Notification</label>
    <type>Checkbox</type>
</CustomField>