force-app/main/default/objects/SVMXA360__CONF_HierarchyConfigDetail__c/fields/SVMXA360__EnableSPMWizards__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__EnableSPMWizards__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable SPM Wizards for this object. If checked the wizards can be accessed for all records of this object.</description>
    <label>Enable SPM Wizards</label>
    <type>Checkbox</type>
</CustomField>