force-app/main/default/objects/SVMXA360__CONF_HierarchyConfigDetail__c/fields/SVMXA360__FieldForDisplayIcon__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__FieldForDisplayIcon__c</fullName>
    <description>Formula field for display icon</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Formula field for display icon</inlineHelpText>
    <label>Formula field for display icon</label>
    <length>255</length>
    <type>Text</type>
</CustomField>