force-app/main/default/objects/SVMXA360__CONF_HierarchyConfigDetail__c/fields/SVMXA360__FilterCriteria__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__FilterCriteria__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to an expression to display only those records that meet the expression criteria.</description>
    <inlineHelpText>Lookup to an expression to display only those records that meet the expression criteria.</inlineHelpText>
    <label>Filter Criteria</label>
    <referenceTo>SVMXA360__CONF_Expression__c</referenceTo>
    <relationshipLabel>Hierarchy Configuration Detail (Filter Criteria)</relationshipLabel>
    <relationshipName>Hierarchy_Configuration_Detail</relationshipName>
    <type>Lookup</type>
</CustomField>