force-app/main/default/objects/SVMXA360__CONF_HierarchyConfigDetail__c/fields/SVMXA360__HierarchyConfigId__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__HierarchyConfigId__c</fullName>
    <description>The master Hierarchy configuration for which the details are represented.</description>
    <label>Hierarchy Configuration</label>
    <referenceTo>SVMXA360__CONF_HierarchyConfig__c</referenceTo>
    <relationshipLabel>Hierarchy Configuration Detail</relationshipLabel>
    <relationshipName>Hierarchy_Configuration_Detail</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>