force-app/main/default/objects/SVMXA360__CONF_HierarchyConfigDetail__c/fields/SVMXA360__NotificationFilterCriteria__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__NotificationFilterCriteria__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Expression to display only those Asset notification records that meet the expression criteria.</description>
    <label>Notification Filter Criteria</label>
    <referenceTo>SVMXA360__CONF_Expression__c</referenceTo>
    <relationshipLabel>Hierarchy Configuration Detail (Notification Filter Criteria)</relationshipLabel>
    <relationshipName>Hierarchy_Configuration_Detail1</relationshipName>
    <type>Lookup</type>
</CustomField>